--- a/package.json
+++ b/package.json
@@ -1,28 +1,43 @@
 {
-  "name": "cadence-design-system",
-  "version": "0.1.9-beta",
-  "private": false,
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/downbeat-academy/cadence-design-system"
-  },
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.0.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "16.11.7",
-    "@types/react": "17.0.34",
-    "eslint": "7",
-    "eslint-config-next": "12.0.3",
-    "typescript": "4.4.4"
-  }
+	"name": "cadence-design-system",
+	"version": "0.1.9-beta",
+	"private": false,
+	"license": "MIT",
+	"main": "dist/index.js",
+	"module": "dist/index.es.js",
+	"files": [
+		"dist"
+	],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/downbeat-academy/cadence-design-system"
+	},
+	"publishConfig": {
+		"registry": "https://registry.npmjs.org"
+	},
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"format": "prettier --write .",
+		"ds:build": "rollup -c",
+		"ds:release": "yarn ds:build && np"
+	},
+	"dependencies": {
+		"@stitches/react": "^1.2.5",
+		"next": "12.0.3",
+		"react": "17.0.2",
+		"react-dom": "17.0.2"
+	},
+	"devDependencies": {
+		"@types/node": "16.11.7",
+		"@types/react": "17.0.34",
+		"eslint": "7",
+		"eslint-config-next": "12.0.3",
+		"prettier": "^2.4.1",
+		"rollup": "^2.59.0",
+		"rollup-plugin-typescript": "^1.0.1",
+		"typescript": "4.4.4"
+	}
 }
