--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
 		"@stitches/react": "^1.2.5",
 		"next": "12.0.3",
 		"react": "17.0.2",
-		"react-dom": "17.0.2"
+		"react-dom": "17.0.2",
+		"rollup-plugin-typescript2": "^0.30.0"
 	},
 	"devDependencies": {
 		"@types/node": "16.11.7",
@@ -37,7 +38,6 @@
 		"eslint-config-next": "12.0.3",
 		"prettier": "^2.4.1",
 		"rollup": "^2.59.0",
-		"rollup-plugin-typescript": "^1.0.1",
 		"typescript": "4.4.4"
 	}
 }
