--- a/package.json
+++ b/package.json
@@ -1,43 +1,53 @@
 {
-	"name": "cadence-design-system",
-	"version": "0.1.9-beta",
-	"private": false,
-	"license": "MIT",
-	"main": "dist/index.js",
-	"module": "dist/index.es.js",
-	"files": [
-		"dist"
-	],
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/downbeat-academy/cadence-design-system"
-	},
-	"publishConfig": {
-		"registry": "https://registry.npmjs.org"
-	},
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint",
-		"format": "prettier --write .",
-		"ds:build": "rollup -c",
-		"ds:release": "yarn ds:build && np"
-	},
-	"dependencies": {
-		"@stitches/react": "^1.2.5",
-		"next": "12.0.3",
-		"react": "17.0.2",
-		"react-dom": "17.0.2",
-		"rollup-plugin-typescript2": "^0.30.0"
-	},
-	"devDependencies": {
-		"@types/node": "16.11.7",
-		"@types/react": "17.0.34",
-		"eslint": "7",
-		"eslint-config-next": "12.0.3",
-		"prettier": "^2.4.1",
-		"rollup": "^2.59.0",
-		"typescript": "4.4.4"
-	}
+  "name": "cadence-design-system",
+  "version": "0.1.9-beta",
+  "private": false,
+  "license": "MIT",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
+  "files": [
+    "dist"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/downbeat-academy/cadence-design-system"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "format": "prettier --write .",
+    "ds:build": "rollup -c",
+    "ds:release": "yarn ds:build && np",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
+  },
+  "dependencies": {
+    "@stitches/react": "^1.2.5",
+    "next": "12.0.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "rollup-plugin-typescript2": "^0.30.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@storybook/addon-a11y": "^6.3.12",
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/react": "^6.3.12",
+    "@types/node": "16.11.7",
+    "@types/react": "17.0.34",
+    "babel-loader": "^8.2.3",
+    "eslint": "7",
+    "eslint-config-next": "12.0.3",
+    "prettier": "^2.4.1",
+    "rollup": "^2.59.0",
+    "storybook-addon-designs": "^6.2.0",
+    "typescript": "4.4.4"
+  }
 }
