--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 		"baseUrl": "./src",
 		"paths": {
 			"@/*": ["*"],
-			"@/components/*": ["/components/*"],
+			"@/components/*": ["/components/*"]
 		},
 		"target": "es5",
 		"lib": ["dom", "dom.iterable", "esnext"],
@@ -18,7 +18,7 @@
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"jsx": "preserve",
-		"incremental": true,
+		"incremental": true
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
 	"exclude": ["node_modules"]
