--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"build-storybook": "build-storybook -s public"
 	},
 	"dependencies": {
+		"@radix-ui/react-label": "^0.1.4",
 		"@stitches/react": "^1.2.5",
 		"next": "12.0.3",
 		"react": "17.0.2",
