--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
 	"dependencies": {
 		"@radix-ui/react-label": "^0.1.4",
 		"@stitches/react": "^1.2.5",
-		"next": "12.0.3",
+		"next": "^12.0.10",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"rollup-plugin-typescript2": "^0.30.0"
+		"rollup-plugin-typescript2": "^0.31.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.16.0",
@@ -42,14 +42,14 @@
 		"@storybook/addon-essentials": "^6.4.18",
 		"@storybook/addon-links": "^6.4.18",
 		"@storybook/react": "^6.4.18",
-		"@types/node": "16.11.7",
-		"@types/react": "17.0.34",
+		"@types/node": "^17.0.17",
+		"@types/react": "^17.0.39",
 		"babel-loader": "^8.2.3",
-		"eslint": "7",
-		"eslint-config-next": "12.0.3",
+		"eslint": "^8.8.0",
+		"eslint-config-next": "^12.0.10",
 		"prettier": "^2.4.1",
 		"rollup": "^2.59.0",
 		"storybook-addon-designs": "^6.2.1",
-		"typescript": "4.4.4"
+		"typescript": "^4.5.5"
 	}
 }
