--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"format": "prettier --write .",
 		"ds:build": "rollup -c",
 		"ds:release": "yarn ds:build && npm publish",
-		"storybook": "start-storybook -p 6006 -s public",
+		"storybook": "start-storybook -p 6006 -s public --ci",
 		"build-storybook": "build-storybook -s public"
 	},
 	"dependencies": {
