--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cadence-design-system",
-  "version": "0.7.4-beta",
+  "version": "0.8.0-beta",
   "private": false,
   "license": "MIT",
   "main": "dist/index.js",
@@ -30,6 +30,7 @@
   "dependencies": {
     "@radix-ui/react-label": "^0.1.4",
     "@stitches/react": "^1.2.5",
+    "boring-avatars": "^1.6.3",
     "next": "^12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
