--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 		"baseUrl": "./src",
 		"paths": {
 			"@/*": ["*"],
-			"@/components/*": ["/components/*"]
+			"@/components/*": ["components/*"]
 		},
 		"target": "es5",
 		"lib": ["dom", "dom.iterable", "esnext"],
