--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cadence-design-system",
-  "version": "0.9.1-beta",
+  "version": "0.10.0-beta",
   "private": false,
   "license": "MIT",
   "main": "dist/index.js",
@@ -33,6 +33,7 @@
     "@stitches/react": "^1.2.5",
     "boring-avatars": "^1.6.3",
     "next": "^12.0.10",
+    "opensheetmusicdisplay": "^1.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "rollup-plugin-typescript2": "^0.31.2"
