--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chromatic": "npx chromatic --project-token=828b59202f83"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^0.1.5",
     "@radix-ui/react-label": "^0.1.4",
     "@radix-ui/react-tooltip": "^0.1.7",
     "@stitches/react": "^1.2.5",
