--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@radix-ui/react-checkbox": "^0.1.5",
     "@radix-ui/react-label": "^0.1.5",
+    "@radix-ui/react-toast": "^0.1.1",
     "@radix-ui/react-tooltip": "^0.1.7",
     "@stitches/react": "^1.2.5",
     "boring-avatars": "^1.6.3",
